Swagger eklenmesi ve ContactServis metodlarının yazılması

--- a/Microservice/ContactService.Api/ContactService.Api.csproj
+++ b/Microservice/ContactService.Api/ContactService.Api.csproj
@@ -10,7 +10,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Domain\Models\" />
     <Folder Include="Migrations\" />
   </ItemGroup>
 
@@ -25,6 +24,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.4" />
+    <PackageReference Include="NSwag.AspNetCore" Version="13.17.0" />
   </ItemGroup>
 
 
