ReportService altyapı ve metodları tamamlandı migrationlar yapıldı.

--- a/Microservice/ContactService.Api/ContactService.Api.csproj
+++ b/Microservice/ContactService.Api/ContactService.Api.csproj
@@ -7,6 +7,8 @@
   <ItemGroup>
     <Compile Remove="Migrations\20220923205426_AddedFirstMigration.cs" />
     <Compile Remove="Migrations\20220923205426_AddedFirstMigration.Designer.cs" />
+    <Compile Remove="Migrations\20220923205800_AddedFirstMigration.cs" />
+    <Compile Remove="Migrations\20220923205800_AddedFirstMigration.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
