--- a/Microservice/ContactService.Api/appsettings.json
+++ b/Microservice/ContactService.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "productionortamýconnectionstringiyazýlacak"
+    "DefaultConnection": "Server=localhost;Port=5432;Database=ContactDb;User Id=postgres;Password=alper123;Integrated Security=true;Pooling=true;"
   },
   "Logging": {
     "LogLevel": {
