RabbitMQ entegrasyonu ve servislerin düzenlemeleri

--- a/Microservice/ReportService.Api/ReportService.Api.csproj
+++ b/Microservice/ReportService.Api/ReportService.Api.csproj
@@ -16,6 +16,7 @@
     </PackageReference>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.4" />
     <PackageReference Include="NSwag.AspNetCore" Version="13.17.0" />
+    <PackageReference Include="RabbitMQ.Client" Version="6.4.0" />
   </ItemGroup>
 
 
