--- a/Microservice/ReportRequestApplication/ReportRequestApplication.csproj
+++ b/Microservice/ReportRequestApplication/ReportRequestApplication.csproj
@@ -8,7 +8,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="ReportExcel\**" />
+    <EmbeddedResource Remove="ReportExcel\**" />
+    <None Remove="ReportExcel\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="ClosedXML" Version="0.96.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="NPOI" Version="2.5.6" />
     <PackageReference Include="RabbitMQ.Client" Version="6.4.0" />
   </ItemGroup>
 
